# evaluation-deformable-registration

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
data/registration-parameter-files/cima/: elastixconfig0.txt  elastixconfig10.txt  elastixconfig12.txt  elastixconfig15.txt  elastixconfig16.txt  elastixconfig17.txt  elastixconfig18.txt  elastixconfig19.txt  elastixconfig20.txt  elastixconfig22.txt  elastixconfig26.txt  elastixconfig28.txt  elastixconfig5.txt  elastixconfig6.txt  elastixconfig9.txt
data/registration-parameter-files/cobralab/: elastixconfig0.txt  elastixconfig1.txt  elastixconfig10.txt  elastixconfig11.txt  elastixconfig12.txt  elastixconfig13.txt  elastixconfig14.txt  elastixconfig15.txt  elastixconfig16.txt  elastixconfig17.txt  elastixconfig18.txt  elastixconfig19.txt  elastixconfig2.txt  elastixconfig20.txt  elastixconfig3.txt  (+15 more)
include/: buffer_image_3d.hpp  constant_kernel.hpp  gaussian_kernel.hpp  gaussian_process.hpp  gp_observation_database.hpp  human_landmark_annotator.hpp  inverse_quadratic_kernel.hpp  kernel_bundle.hpp  kernel_function.hpp  kernel_hyperparameter_estimation.hpp  landmark_annotator.hpp  landmark_suggestion.hpp  mean_function.hpp  partial_window.hpp  processing_scripts.hpp  processing_scripts_2d.hpp  processing_scripts_3d.hpp  querying_strategy.hpp  updatable_cholesky.hpp  visualization_functions.hpp  wendland_kernel.hpp
src/: human_landmark_annotator.cpp  partial_window.cpp  processing_scripts.cpp  processing_scripts_2d.cpp  processing_scripts_3d.cpp  querying_strategy.cpp  updatable_cholesky.cpp  visualization_functions.cpp
(+65 files in other folders)
